feat: create swagger documentation of create_user useCase
