# src/utils/interfaces/error_response.go
@@ -1,6 +1,6 @@
 package utils_interfaces
 
 type ErrorResponse struct {
-	Error      string `json:"error"`
-	StatusCode int    `json:"statusCode"`
+	Error      string `json:"error" example:"variable error message"`
+	StatusCode int    `json:"statusCode" example:"-1"`
 }
